welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: ')' expected but 'else' found.
  else if (getY() == 0) {setPos(0, getX()+1)}
  ^